04-lection2/01-histogram/histogram.css
.histogram {
    width: 354px;
    border-radius: 12px;
    background: var(--white);
    display: flex;
    flex-direction: column;
    align-items: center;
}

.histogram__heading {
    position: relative;
    text-align: center;
    font-family: 'Roboto', sans-serif;;
    font-style: normal;
    font-weight: 500;
    font-size: 21px;
    line-height: 25px;
    color: var(--black);
}


.histogram__wrapper {
    width: 80%;
    margin-top: 5em;
    border: 1px solid var(--grey-3);
    box-sizing: border-box;
    border-radius: 12px;
    background-color: var(--white);
    justify-content: center;
    align-items: center;
    padding: 20px;

}

.histogram__bars {
    display: flex;
    align-items: flex-end;
    height: 50px;
    justify-content: center;
}

.histogram__bar {
    flex: 1 0 auto;
    margin-right: 1px;
    background: #4263EB;
}

.histogram__bar:last-child {
    margin-right: 0;
}


.histogram__title {
    margin: 0;
    font-size: 16px;
    line-height: 24px;
    color: var(--black);
    opacity: 0.8;
}

.histogram__link {
    display: inline-block;
    color: var(--blue);
    font-size: 16px;
    line-height: 24px;
    margin-left: 20px;
    text-decoration: none;
}

.histogram__total {
    font-size: 20px;
    line-height: 26px;
    margin-bottom: 39px;
    display: block;
    color: var(--black);
}

